fix: dark mode for card title if ‘a’ tag

--- a/src/components/Card/Card.sass
+++ b/src/components/Card/Card.sass
@@ -37,7 +37,7 @@
 			margin-bottom: 0
 
 		a:not(:hover)
-			color: $gray-dark
+			@include theme-color-graydark-else-white
 
 	.Card_Content_Sub
 		margin-bottom: 10px
